--- a/index.html
+++ b/index.html
@@ -6,10 +6,98 @@
         <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <link rel="stylesheet" href="css/leaflet.css"><link rel="stylesheet" href="css/L.Control.Locate.min.css">
-        <link rel="stylesheet" href="css/qgis2web.css"><link rel="stylesheet" href="css/fontawesome-all.min.css">
-        <link rel="stylesheet" href="css/leaflet-control-geocoder.Geocoder.css">
-        <link rel="stylesheet" href="css/leaflet-measure.css">
+        <link rel="stylesheet" href="./resources/ol.css">
+        <link rel="stylesheet" href="resources/fontawesome-all.min.css">
+        <link rel="stylesheet" href="./resources/ol-layerswitcher.css">
+        <link rel="stylesheet" href="./resources/qgis2web.css">
+<style>
+.search-layer {
+  top: 135px;
+  left: .5em;
+}
+.ol-touch .search-layer {
+  top: 180px;
+}
+</style>
+        <style>
+        html, body {
+            background-color: #ffffff;
+        }
+        .ol-control button {
+            background-color: #f8f8f8 !important;
+            color: #000000 !important;
+            border-radius: 0px !important;
+        }
+        .ol-zoom, .geolocate, .gcd-gl-control .ol-control {
+            background-color: rgba(255,255,255,.4) !important;
+            padding: 3px !important;
+        }
+        .ol-scale-line {
+            background: none !important;
+        }
+        .ol-scale-line-inner {
+            border: 2px solid #f8f8f8 !important;
+            border-top: none !important;
+            background: rgba(255, 255, 255, 0.5) !important;
+            color: black !important;
+        }
+        </style>
+
+        <style>
+        .geolocate {
+            top: 65px;
+            left: .5em;
+        }
+        .ol-touch .geolocate {
+            top: 80px;
+        }
+        </style>
+<style>
+.tooltip {
+  position: relative;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 4px;
+  color: white;
+  padding: 4px 8px;
+  opacity: 0.7;
+  white-space: nowrap;
+}
+.tooltip-measure {
+  opacity: 1;
+  font-weight: bold;
+}
+.tooltip-static {
+  background-color: #ffcc33;
+  color: black;
+  border: 1px solid white;
+}
+.tooltip-measure:before,
+.tooltip-static:before {
+  border-top: 6px solid rgba(0, 0, 0, 0.5);
+  border-right: 6px solid transparent;
+  border-left: 6px solid transparent;
+  content: "";
+  position: absolute;
+  bottom: -6px;
+  margin-left: -7px;
+  left: 50%;
+}
+.tooltip-static:before {
+  border-top-color: #ffcc33;
+}
+.measure-control {
+  top: 100px;
+  left: .5em;
+  display: flex;
+}
+.ol-touch .measure-control {
+  top: 130px;
+}
+.measure-control label {
+  padding: 1px;
+  padding-right: 4px;
+}
+</style>
         <style>
         html, body, #map {
             width: 100%;
@@ -22,213 +110,31 @@
     </head>
     <body>
         <div id="map">
+            <div id="popup" class="ol-popup">
+                <a href="#" id="popup-closer" class="ol-popup-closer"></a>
+                <div id="popup-content"></div>
+            </div>
         </div>
-        <script src="js/qgis2web_expressions.js"></script>
-        <script src="js/leaflet.js"></script><script src="js/L.Control.Locate.min.js"></script>
-        <script src="js/leaflet.rotatedMarker.js"></script>
-        <script src="js/leaflet.pattern.js"></script>
-        <script src="js/leaflet-hash.js"></script>
-        <script src="js/Autolinker.min.js"></script>
-        <script src="js/rbush.min.js"></script>
-        <script src="js/labelgun.min.js"></script>
-        <script src="js/labels.js"></script>
-        <script src="js/leaflet-control-geocoder.Geocoder.js"></script>
-        <script src="js/leaflet-measure.js"></script>
-        <script src="layers/BatasAdministrasiRW_2.js"></script>
-        <script src="layers/KandangHewanTernak_3.js"></script>
-        <script src="layers/layers.js"></script>
+        <script src="resources/qgis2web_expressions.js"></script>
+<script src="resources/proj4.js"></script>
+        <script>proj4.defs('EPSG:32749','+proj=utm +zone=49 +south +datum=WGS84 +units=m +no_defs');</script>
+        <script src="resources/polyfills.js"></script>
+        <script src="./resources/functions.js"></script>
+        <script src="./resources/ol.js"></script>
+        <script src="./resources/ol-layerswitcher.js"></script>
+        <script src="layers/BatasAdministrasiRW_2.js"></script><script src="layers/KandangHewanTernak_3.js"></script>
+        <script src="styles/BatasAdministrasiRW_2_style.js"></script><script src="styles/KandangHewanTernak_3_style.js"></script>
+        <script src="./layers/layers.js" type="text/javascript"></script> 
+        <script src="./resources/Autolinker.min.js"></script>
+        <script src="./resources/qgis2web.js"></script>
+
         <script>
-        var map = L.map('map', {
-            zoomControl:true, maxZoom:28, minZoom:12
-        }).fitBounds([[-7.399218229778429,110.45744365977272],[-7.342990306316922,110.54345534390414]]);
-        var hash = new L.Hash(map);
-        map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
-        var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
-        L.control.locate({locateOptions: {maxZoom: 19}}).addTo(map);
-        var measureControl = new L.Control.Measure({
-            position: 'topleft',
-            primaryLengthUnit: 'feet',
-            secondaryLengthUnit: 'miles',
-            primaryAreaUnit: 'sqfeet',
-            secondaryAreaUnit: 'sqmiles'
-        });
-        measureControl.addTo(map);
-        document.getElementsByClassName('leaflet-control-measure-toggle')[0]
-        .innerHTML = '';
-        document.getElementsByClassName('leaflet-control-measure-toggle')[0]
-        .className += ' fas fa-ruler';
-        var bounds_group = new L.featureGroup([]);
-        function setBounds() {
+        // Menampilkan gambar langsung di popup-content jika ada properti field_8
+        function showImageInPopup(feature) {
+          var popup = document.getElementById('popup-content');
+          var imgSrc = feature.properties['field_8'] !== null ? 'images/' + feature.properties['field_8'] : 'images/default.jpg';
+          popup.innerHTML = '<img src="' + imgSrc + '" width="300" style="border:1px solid #ccc">';
         }
-        map.createPane('pane_RRZEOpenStreetMapStandardHD_0');
-        map.getPane('pane_RRZEOpenStreetMapStandardHD_0').style.zIndex = 400;
-        var layer_RRZEOpenStreetMapStandardHD_0 = L.tileLayer('http://a.osm.rrze.fau.de/osmhd/{z}/{x}/{y}.png', {
-            pane: 'pane_RRZEOpenStreetMapStandardHD_0',
-            opacity: 1.0,
-            attribution: '<a href="https://www.openstreetmap.org/copyright">© OpenStreetMap contributors, CC-BY-SA</a>',
-            minZoom: 10,
-            maxZoom: 28,
-            minNativeZoom: 10,
-            maxNativeZoom: 19
-        });
-        layer_RRZEOpenStreetMapStandardHD_0;
-        map.addLayer(layer_RRZEOpenStreetMapStandardHD_0);
-        map.createPane('pane_GoogleSatelliteHybrid_1');
-        map.getPane('pane_GoogleSatelliteHybrid_1').style.zIndex = 401;
-        var layer_GoogleSatelliteHybrid_1 = L.tileLayer('https://mt1.google.com/vt/lyrs=y&x={x}&y={y}&z={z}', {
-            pane: 'pane_GoogleSatelliteHybrid_1',
-            opacity: 1.0,
-            attribution: '',
-            minZoom: 10,
-            maxZoom: 28,
-            minNativeZoom: 10,
-            maxNativeZoom: 19
-        });
-        layer_GoogleSatelliteHybrid_1;
-        map.addLayer(layer_GoogleSatelliteHybrid_1);
-        function pop_BatasAdministrasiRW_2(feature, layer) {
-            var popupContent = '<table>\
-                    <tr>\
-                        <th scope="row">provinsi</th>\
-                        <td>' + (feature.properties['provinsi'] !== null ? autolinker.link(feature.properties['provinsi'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">kota</th>\
-                        <td>' + (feature.properties['kota'] !== null ? autolinker.link(feature.properties['kota'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">kecamatan</th>\
-                        <td>' + (feature.properties['kecamatan'] !== null ? autolinker.link(feature.properties['kecamatan'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">kelurahan</th>\
-                        <td>' + (feature.properties['kelurahan'] !== null ? autolinker.link(feature.properties['kelurahan'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">dusun</th>\
-                        <td>' + (feature.properties['dusun'] !== null ? autolinker.link(feature.properties['dusun'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">RW</th>\
-                        <td>' + (feature.properties['RW'] !== null ? autolinker.link(feature.properties['RW'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                </table>';
-            layer.bindPopup(popupContent, {maxHeight: 400});
-        }
-
-        function style_BatasAdministrasiRW_2() {
-            return {
-                pane: 'pane_BatasAdministrasiRW_2',
-                opacity: 1,
-                color: 'rgba(255,127,0,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 1.0, 
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(247,247,0,1.0)',
-                interactive: true,
-            }
-        }
-        map.createPane('pane_BatasAdministrasiRW_2');
-        map.getPane('pane_BatasAdministrasiRW_2').style.zIndex = 402;
-        map.getPane('pane_BatasAdministrasiRW_2').style['mix-blend-mode'] = 'normal';
-        var layer_BatasAdministrasiRW_2 = new L.geoJson(json_BatasAdministrasiRW_2, {
-            attribution: '',
-            interactive: true,
-            dataVar: 'json_BatasAdministrasiRW_2',
-            layerName: 'layer_BatasAdministrasiRW_2',
-            pane: 'pane_BatasAdministrasiRW_2',
-            onEachFeature: pop_BatasAdministrasiRW_2,
-            style: style_BatasAdministrasiRW_2_0,
-        });
-        bounds_group.addLayer(layer_BatasAdministrasiRW_2);
-        map.addLayer(layer_BatasAdministrasiRW_2);
-        function pop_KandangHewanTernak_3(feature, layer) {
-            var popupContent = '<table>\
-                    <tr>\
-                        <th scope="row">pemilik</th>\
-                        <td>' + (feature.properties['pemilik'] !== null ? autolinker.link(feature.properties['pemilik'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">jml_kbg</th>\
-                        <td>' + (feature.properties['jml_kbg'] !== null ? autolinker.link(feature.properties['jml_kbg'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">RT</th>\
-                        <td>' + (feature.properties['RT'] !== null ? autolinker.link(feature.properties['RT'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">RW</th>\
-                        <td>' + (feature.properties['RW'] !== null ? autolinker.link(feature.properties['RW'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                </table>';
-            layer.bindPopup(popupContent, {maxHeight: 400});
-        }
-
-        function style_KandangHewanTernak_3_0() {
-            return {
-                pane: 'pane_KandangHewanTernak_3',
-                interactive: true,
-            }
-        }
-        map.createPane('pane_KandangHewanTernak_3');
-        map.getPane('pane_KandangHewanTernak_3').style.zIndex = 415;
-        map.getPane('pane_KandangHewanTernak_3').style['mix-blend-mode'] = 'normal';
-        var layer_KandangHewanTernak_3 = new L.geoJson(json_KandangHewanTernak_3, {
-            attribution: '',
-            interactive: true,
-            dataVar: 'json_KandangHewanTernak_3',
-            layerName: 'layer_KandangHewanTernak_3',
-            pane: 'pane_KandangHewanTernak_3',
-            onEachFeature: pop_KandangHewanTernak_3,
-            pointToLayer: function (feature, latlng) {
-                var context = {
-                    feature: feature,
-                    variables: {}
-                };
-                return L.circleMarker(latlng, style_KandangHewanTernak_3_0(feature));
-            },
-        });
-        bounds_group.addLayer(layer_KandangHewanTernak_3);
-        map.addLayer(layer_KandangHewanTernak_3);
-        var osmGeocoder = new L.Control.Geocoder({
-            collapsed: true,
-            position: 'topleft',
-            text: 'Search',
-            title: 'Testing'
-        }).addTo(map);
-        document.getElementsByClassName('leaflet-control-geocoder-icon')[0]
-        .className += ' fa fa-search';
-        document.getElementsByClassName('leaflet-control-geocoder-icon')[0]
-        .title += 'Search for a place';
-        var baseMaps = {};
-        L.control.layers(baseMaps,{'<img src="legend/TernakKambing_15.png" /> Ternak Kambing': layer_KandangHewanTernak_3,'<img src="legend/TernakSapidanKambing_14.png" /> Ternak Sapi dan Kambing': layer_TernakSapidanKambing_14,'<img src="legend/TernakSapi_13.png" /> Ternak Sapi': layer_TernakSapi_13,'<img src="legend/RWI_12.png" /> RW I': layer_RWI_12,'<img src="legend/RWII_11.png" /> RW II': layer_RWII_11,'<img src="legend/RWIII_10.png" /> RW III': layer_RWIII_10,'<img src="legend/RWIV_9.png" /> RW IV': layer_RWIV_9,'<img src="legend/RWIX_8.png" /> RW IX': layer_RWIX_8,'<img src="legend/RWV_7.png" /> RW V': layer_RWV_7,'<img src="legend/RWVI_6.png" /> RW VI': layer_RWVI_6,'<img src="legend/RWVII_5.png" /> RW VII': layer_RWVII_5,'<img src="legend/RWVIII_4.png" /> RW VIII': layer_RWVIII_4,'<img src="legend/RWX_3.png" /> RW X': layer_RWX_3,'<img src="legend/Randuacir_2.png" /> Randuacir': layer_BatasAdministrasiRW_2,"Google Satellite Hybrid": layer_GoogleSatelliteHybrid_1,"RRZE OpenStreetMap Standard HD": layer_RRZEOpenStreetMapStandardHD_0,}).addTo(map);
-        setBounds();
-        var i = 0;
-        layer_BatasAdministrasiRW_2.eachLayer(function(layer) {
-            var context = {
-                feature: layer.feature,
-                variables: {}
-            };
-            layer.bindTooltip((layer.feature.properties['RW'] !== null?String('<div style="color: #323232; font-size: 10pt; font-family: \'Arial\', sans-serif;">' + layer.feature.properties['RW']) + '</div>':''), {permanent: true, offset: [-0, -16], className: 'css_BatasAdministrasiRW_2'});
-            labels.push(layer);
-            totalMarkers += 1;
-              layer.added = true;
-              addLabel(layer, i);
-              i++;
-        });
-        resetLabels([layer_BatasAdministrasiRW_2]);
-        map.on("zoomend", function(){
-            resetLabels([layer_BatasAdministrasiRW_2]);
-        });
-        map.on("layeradd", function(){
-            resetLabels([layer_BatasAdministrasiRW_2]);
-        });
-        map.on("layerremove", function(){
-            resetLabels([layer_BatasAdministrasiRW_2]);
-        });
         </script>
     </body>
 </html>
