--- a/index.html
+++ b/index.html
@@ -127,5 +127,24 @@
         <script src="./layers/layers.js" type="text/javascript"></script> 
         <script src="./resources/Autolinker.min.js"></script>
         <script src="./resources/qgis2web.js"></script>
+
+        <script>
+        function extractFileName(fullPath) {
+            return fullPath.split(/(\\|\/)/g).pop();
+        }
+
+        function showImageInPopup(feature) {
+          var popup = document.getElementById('popup-content');
+          var fileName = extractFileName(feature.properties['field_9']);
+          var imgSrc = fileName ? 'images/' + fileName : 'images/default.jpg';
+          popup.innerHTML += '<img src="' + imgSrc + '" width="300" style="margin-top:10px; border:1px solid #ccc">';
+        }
+
+        map.on('singleclick', function (evt) {
+          map.forEachFeatureAtPixel(evt.pixel, function (feature, layer) {
+            showImageInPopup(feature);
+          });
+        });
+        </script>
     </body>
 </html>
